# team0

./: .gitignore  README.md  setup.cfg  steps.md
.github/workflows/: CI.yml
doc/source/: conf.py  index.rst  modules.rst
docs/source/: README.md  conf.py
src/: notebook_team0.ipynb  notebook_unit1.ipynb
src/package/: main.py
src/tdcia/: __init__.py
src/tdcia/package/: statistical.py
src/tdcia/test/: test_numerical.py  test_numerical_1.py  test_numerical_2.py  test_numerical_3.py  test_statistical.py
src/tests-examples/: test_transform3.py  test_transform4.py  test_transform5.py
