[metadata]
name = team0-package-iulusoy
version = 0.0.1
author = Inga Ulusoy
author_email = inga.ulusoy@uni-heidelberg.de
description = team0 data analysis package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iulusoy/team0
project_urls =
    Bug Tracker = https://github.com/iulusoy/team0/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src
